# create-cpp-app

./: CMakeLists.txt  Construct.md  build.sh  install.sh  uninstall.sh
src/: CMakeLists.txt  main.cpp
src/basic/: fs.cpp  fs.h  text.cpp  text.h
src/descriptions/: CMakeLists_txt.h  README_md.h  build_sh.h  conanfile_txt.h  descriptions.cpp  descriptions.h  gitignore.h  main_cpp.h  src_CMakeLists_txt.h
